crates/parser/tests/snapshots/fixture_test__extern_basic.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.Math
      methods:
        - visibility: Private
          name: abs
          param_types:
            - Named:
                name: Int
                span:
                  - 51
                  - 54
          return_type:
            Named:
              name: Int
              span:
                - 59
                - 62
          span:
            - 43
            - 62
      span:
        - 13
        - 64
