crates/parser/tests/snapshots/fixture_test__extern_codegen_void.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.System
      alias: ~
      alias_visibility: ~
      type_params: []
      methods:
        - visibility: Private
          name: gc
          param_types: []
          return_type:
            Named:
              name: Unit
              span:
                - 57
                - 61
          span:
            - 45
            - 61
      span:
        - 13
        - 63
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Do:
          exprs:
            - App:
                func:
                  Var:
                    name: gc
                    span:
                      - 82
                      - 84
                args: []
                is_ufcs: false
                span:
                  - 82
                  - 86
            - Lit:
                value:
                  Int: 0
                span:
                  - 92
                  - 93
          span:
            - 76
            - 95
      span:
        - 65
        - 95
