crates/parser/tests/snapshots/fixture_test__extern_multiple_methods.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.Math
      methods:
        - name: abs
          param_types:
            - Named:
                name: Int
                span:
                  - 51
                  - 54
          return_type:
            Named:
              name: Int
              span:
                - 59
                - 62
          span:
            - 43
            - 62
        - name: max
          param_types:
            - Named:
                name: Int
                span:
                  - 75
                  - 78
            - Named:
                name: Int
                span:
                  - 80
                  - 83
          return_type:
            Named:
              name: Int
              span:
                - 88
                - 91
          span:
            - 67
            - 91
        - name: min
          param_types:
            - Named:
                name: Int
                span:
                  - 104
                  - 107
            - Named:
                name: Int
                span:
                  - 109
                  - 112
          return_type:
            Named:
              name: Int
              span:
                - 117
                - 120
          span:
            - 96
            - 120
      span:
        - 13
        - 122
