crates/parser/tests/snapshots/fixture_test__extern_no_methods.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.Math
      alias: ~
      type_params: []
      methods: []
      span:
        - 13
        - 40
