crates/parser/tests/snapshots/fixture_test__extern_typecheck_basic.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.Math
      methods:
        - name: abs
          param_types:
            - Named:
                name: Int
                span:
                  - 48
                  - 51
          return_type:
            Named:
              name: Int
              span:
                - 53
                - 56
          span:
            - 38
            - 57
      span:
        - 13
        - 58
  - DefFn:
      name: main
      visibility: Private
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: abs
              span:
                - 77
                - 80
          args:
            - Lit:
                value:
                  Int: 42
                span:
                  - 81
                  - 83
          span:
            - 76
            - 84
      span:
        - 59
        - 86
