crates/parser/tests/snapshots/fixture_test__extern_typecheck_call.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.Math
      methods:
        - name: abs
          param_types:
            - Named:
                name: Int
                span:
                  - 50
                  - 53
          return_type:
            Named:
              name: Int
              span:
                - 55
                - 58
          span:
            - 40
            - 59
        - name: max
          param_types:
            - Named:
                name: Int
                span:
                  - 72
                  - 75
            - Named:
                name: Int
                span:
                  - 76
                  - 79
          return_type:
            Named:
              name: Int
              span:
                - 81
                - 84
          span:
            - 62
            - 85
      span:
        - 13
        - 86
  - DefFn:
      name: main
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: max
              span:
                - 105
                - 108
          args:
            - App:
                func:
                  Var:
                    name: abs
                    span:
                      - 110
                      - 113
                args:
                  - Lit:
                      value:
                        Int: 5
                      span:
                        - 114
                        - 115
                span:
                  - 109
                  - 116
            - Lit:
                value:
                  Int: 3
                span:
                  - 117
                  - 118
          span:
            - 104
            - 119
      span:
        - 87
        - 121
