crates/parser/tests/snapshots/fixture_test__extern_typecheck_object.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: krypton.runtime.KryptonIO
      methods:
        - visibility: Private
          name: println
          param_types:
            - Named:
                name: Object
                span:
                  - 66
                  - 72
          return_type:
            Named:
              name: Unit
              span:
                - 77
                - 81
          span:
            - 54
            - 81
      span:
        - 13
        - 83
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: println
              span:
                - 98
                - 105
          args:
            - Lit:
                value:
                  Int: 42
                span:
                  - 106
                  - 108
          is_ufcs: false
          span:
            - 98
            - 109
      span:
        - 85
        - 109
