crates/parser/tests/snapshots/fixture_test__full_program.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefType:
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
            - - y
              - Named:
                  name: Int
                  span:
                    - 39
                    - 42
      deriving: []
      span:
        - 13
        - 44
  - DefType:
      name: Shape
      visibility: Private
      type_params: []
      kind:
        Sum:
          variants:
            - name: Circle
              fields:
                - Named:
                    name: Int
                    span:
                      - 66
                      - 69
              span:
                - 59
                - 70
            - name: Rect
              fields:
                - Named:
                    name: Int
                    span:
                      - 78
                      - 81
                - Named:
                    name: Int
                    span:
                      - 83
                      - 86
              span:
                - 73
                - 87
      deriving: []
      span:
        - 46
        - 87
  - DefFn:
      name: area
      visibility: Private
      type_params: []
      params:
        - name: s
          ty: ~
          span:
            - 98
            - 99
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: s
              span:
                - 109
                - 110
          arms:
            - pattern:
                Constructor:
                  name: Circle
                  args:
                    - Var:
                        name: r
                        span:
                          - 124
                          - 125
                  span:
                    - 117
                    - 126
              guard: ~
              body:
                BinaryOp:
                  op: Mul
                  lhs:
                    Var:
                      name: r
                      span:
                        - 130
                        - 131
                  rhs:
                    Var:
                      name: r
                      span:
                        - 134
                        - 135
                  span:
                    - 130
                    - 135
              span:
                - 117
                - 135
            - pattern:
                Constructor:
                  name: Rect
                  args:
                    - Var:
                        name: w
                        span:
                          - 146
                          - 147
                    - Var:
                        name: h
                        span:
                          - 149
                          - 150
                  span:
                    - 141
                    - 151
              guard: ~
              body:
                BinaryOp:
                  op: Mul
                  lhs:
                    Var:
                      name: w
                      span:
                        - 155
                        - 156
                  rhs:
                    Var:
                      name: h
                      span:
                        - 159
                        - 160
                  span:
                    - 155
                    - 160
              span:
                - 141
                - 160
          span:
            - 103
            - 163
      span:
        - 89
        - 163
  - DefFn:
      name: origin
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Do:
          exprs:
            - Let:
                name: x
                value:
                  Lit:
                    value:
                      Int: 0
                    span:
                      - 192
                      - 193
                body: ~
                span:
                  - 184
                  - 193
            - Var:
                name: x
                span:
                  - 199
                  - 200
          span:
            - 178
            - 202
      span:
        - 165
        - 202
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Do:
          exprs:
            - Let:
                name: p
                value:
                  App:
                    func:
                      Var:
                        name: origin
                        span:
                          - 229
                          - 235
                    args: []
                    span:
                      - 229
                      - 237
                body: ~
                span:
                  - 221
                  - 237
            - Let:
                name: s
                value:
                  App:
                    func:
                      Var:
                        name: Circle
                        span:
                          - 251
                          - 257
                    args:
                      - Lit:
                          value:
                            Int: 5
                          span:
                            - 258
                            - 259
                    span:
                      - 251
                      - 260
                body: ~
                span:
                  - 243
                  - 260
            - App:
                func:
                  Var:
                    name: area
                    span:
                      - 266
                      - 270
                args:
                  - Var:
                      name: s
                      span:
                        - 271
                        - 272
                span:
                  - 266
                  - 273
          span:
            - 215
            - 275
      span:
        - 204
        - 275
